=head1 Changes in DBD-Oracle 1.17 (svn rev NNN)

  Fixed csform setting for Oracle 8.0.
  Fixed csform setting for some UTF8 cases.
  Fixed INTERVAL DAY TO SECOND thanks to Honza Pazdziora.

  Added support for nested cursors in select lists thanks to Charles Jardine.
  Added "Trailing Spaces" section to docs thanks to Michael A Chase.
  Changed "Binding Cursors" docs, clarifying examples thanks to Charles Jardine.

  Changed Makefile.PL to avoid risk of sqlplus hanging thanks to Mark Dedlow.
  Changed Makefile.PL to prefer ~/rdbms/public over other ~/rdbms/* for .h files.
  Changed Makefile.PL to improve build rule detection.
  Changed Makefile.PL to Instant Client build support thanks to Hilmar Lapp.
  Changed Makefile.PL to do VMS logical name checks thanks to Jakob Snoer.
  Updated README.vms re logical name tables thanks to Jakob Snoer.
  Updated README.aix thanks to Stephen de Vries.
  Updated README.macosx thanks to Stephen de Vries.

  The Copyright terms for DBD::Oracle have been simplified and now read:
    The DBD::Oracle module is free software; you can redistribute it
    and/or modify it under the same terms as Perl 5.

=head1 Changes in DBD-Oracle 1.16 (svn rev 515)   22nd October 2004

  NOTE:
  This release has major changes to Unicode support. See below.
  It no longer supports the old Oracle 7 OCI interface.
  It requires DBI >= 1.38 for some of the tests if using Perl 5.6.
  It no longer supports Perl 5.5 or earlier.

  Fixed placeholder names to be case insensitive thanks to Charles Jardine.
  Fixed some LOB test problems with Oracle 8.1.7 by implementing ora_lob_append
    with OCILobGetLength() and OCILobWrite(), instead of buggy OCILobWriteAppend(),
    if the Oracle client version is < 9.0. Thanks to Jeff Urlwin.
  Fixed handling of temporary LOBs thanks to Chris Donnelly.
  Fixed memory leaks in auto LOB refetch code thanks to Dongqiang Bai.
  Fixed reporting of length truncated in error message thanks to Jeff Urlwin.